--- a/css/version2.css
+++ b/css/version2.css
@@ -24,8 +24,8 @@ img {
 
 article {
 	display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center;
+  color: #000;
 }
 
 section {
@@ -33,16 +33,14 @@ section {
 }
 
 section.text {
-  background: #fff;
-  color: #000;
   padding: 1rem 2rem;
   font-size: 1rem;
   line-height: 1.5rem;
   margin-bottom: 2rem;
 }
 
-section.text h2 {
-  text-align: center;
+.photo {
+      margin-left: 1rem;
 }
 
 header {
@@ -78,6 +76,7 @@ footer {
 
 #cougar {
   background: #B26219;
+  color: #fff;
 }
 
 #lion {
